Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7119

QFileSystemModel never displays symlinks that point to non existing files, even if QDir::System filter is passed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.6.2
    • 4.6.0
    • None
    • Qt 4.6.0 - Linux (Ubuntu Karmic)
    • b167c8b31c6da7b3eb5083396c447c679f1a591a

      As stated on QDirIterator's documentation, it is possible to list broken symlinks by passing the QDir::System flag, however the QFileSystemModel does not allow displaying this kind of file.

      I'm trying to display all entries of a directory using the following model:
      QFileSystemModel *model = new QFileSystemModel();
      model->setFilter(QDir::AllDirs|QDir::AllEntries|QDir::System|QDir::Hidden|QDir::NoDotAndDotDot);

      Using the same filters on a QDir::entryInfoList or QDir::entryList call works as expected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            menard Alexis Menard (closed Nokia identity) (Inactive)
            rodrigorosauro Rodrigo Rosauro
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes