Display broken symlinks in the filesystem model.

A broken symlink has a -1 size so we need to special case that.

Task-number:QTBUG-7119
Reviewed-by:olivier